docs - docker page alignment issue fixed

--- a/src/templates/page.scss
+++ b/src/templates/page.scss
@@ -281,6 +281,10 @@ thead:first-child:hover tr{
 /**
 * add syntax highlighting
 */
+.gatsby-highlight {
+  max-width: 688px;
+}
+
 .gatsby-highlight pre,
 .gatsby-highlight code {
   top: 0;
